# magi-system

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/magi/: __init__.py  discussion.py  display.py  llm.py  main.py  models.py  persona.py  save.py
