[project]
name = "magi-system"
version = "0.1.0"
description = "MAGI System - Multi-persona thought experiment tool"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
magi = "magi.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/magi"]
